compiler/tests/language/negative/oopSurfaceRoleCapability/associated/wrongAssociatedConstType.qn
extend HttpCtx<...Caps> : pub HttpAssociatedSpec<HttpCtx<...Caps>> {
  type Body = CreateUserBody
  type Error = IntoHttpError
  const requiresAuth: string = "yes"
}
